# cert-mgmt-testing

./: .env.example  .gitignore  README.md  cert_test.ps1  cert_test.sh  create-hubs-and-devices.ps1  create-hubs-and-devices.sh  generate_certs.ps1  mqtt_credential_test.py  mqtt_issue_cert.py  priv-env-setup.ps1  priv-env-setup.sh  pyproject.toml  utils.ps1  utils.sh
certGen/: certGen.sh  generate_device_certs.sh
